# OpenNexus3DStudio

./: .cursorrules  .env.example  .env.production.example  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .graphifyignore  .windsurfrules  AGENTS.md  CLAUDE.md  CURSOR.md  DEV_MACHINE_TOPOLOGY.md  HOW_TO_USE_NEW_FEATURES.md  INTEGRATION_SUMMARY.md  LICENSE  MONETIZATION_ROADMAP_BACKUP.md  NVIDIA_XR_AI_INTEGRATION.md  OpenNexus3DStudio.code-workspace  README.md  electron-builder.json  index.html  kimodo-backend-integration.md  loot-assets.source  mock-api-server.js  package-lock.json  package.json  playwright.config.js  protect-monetization-roadmap.js  protect-roadmap.bat  start-dev-surface.ps1  sync-to-pc.sh  todo.md  vercel.json  vite.config.js
.brain/: LOG.md  MEMORY.md  SESSION.md  SHARED.md  config.json
.github/: copilot-instructions.md
docs/: ANDROID_STUDIO_AI_BRIEF.md  ANDROID_XR_FLOOR_ANCHORING.md  API_AVATAR_RIG_CONTRACT.md  AVATAR_PIPELINE.md  HTTPS_SETUP.md  HYWORLD_IMAGE_TO_WORLD_SCOPE.md  IWSDK_INTEGRATION.md  IWSDK_LOCAL_FORK.md  LOOT_ASSETS_SETUP.md  MCP_SETUP.md  MULTI_IMAGE_SPLAT_ROADMAP.md  OPENXR_FACE_TRACKING_ANDROID_XR.md  PHYGITAL_NFC_APPAREL_ROADMAP.md  PHYGITAL_PASSPORT_API.md  PUBLIC_DEPLOY.md  README.md  SPACETIME_MOAT_OVERVIEW.md  SPATIAL_FABRIC_INTEGRATION.md  SSH_HOST_NAMES.md  THIRDWEB_BENEFITS_AND_UI.md  THREEJS_QUICK_START.md  THREEJS_WEBGPU_WEBXR_MIGRATION.md  VERCEL_LOOT_ASSETS.md  VRM_UPLOAD_DISPLAY_EXPORT.md  VR_FLOOR_ANCHORING_FIX.md  VR_POSITIONING.md  WALLET_OWNED_ASSETS_AVATAR_APPROACH.md  (+8 more)
native/android-xr-face-bridge/app/src/main/cpp/: CMakeLists.txt  cs_openxr_face_jni.cpp  on_openxr_face_jni.cpp  openxr_face_engine.cpp  openxr_face_engine.h  openxr_gfx_egl.cpp  openxr_gfx_egl.h
(+436 files in other folders)
